fixes padding-bottom in form when view is on mobile

--- a/app/assets/stylesheets/home.sass
+++ b/app/assets/stylesheets/home.sass
@@ -47,6 +47,9 @@
   .row.form-sections
     padding: 1.25vh 10vw 5vh 10vw
 
+    .form-inline
+      padding-bottom: 2.5vh
+
   .row.footer
     padding: 5vh 10vw
 
